--- a/kafka-mqtt/Dockerfile.ubi8
+++ b/kafka-mqtt/Dockerfile.ubi8
@@ -73,4 +73,13 @@ COPY --chown=appuser:appuser include/etc/confluent/docker /etc/confluent/docker
 
 USER appuser
 
+RUN chmod g-s /usr/bin/chage /usr/bin/gpasswd /usr/bin/ksu \
+    /usr/bin/mount /usr/bin/newgrp /usr/bin/su /usr/bin/umount \
+    /usr/bin/write /usr/libexec/dbus-1/dbus-daemon-launch-helper \
+    /usr/libexec/utempter/utempter /usr/sbin/pam_timestamp_check /usr/sbin/unix_chkpwd
+RUN chmod a-s /usr/bin/chage /usr/bin/gpasswd /usr/bin/ksu \
+    /usr/bin/mount /usr/bin/newgrp /usr/bin/su /usr/bin/umount \
+    /usr/bin/write /usr/libexec/dbus-1/dbus-daemon-launch-helper \
+    /usr/libexec/utempter/utempter /usr/sbin/pam_timestamp_check /usr/sbin/unix_chkpwd
+
 CMD ["/etc/confluent/docker/run"]
