--- a/service.yml
+++ b/service.yml
@@ -7,3 +7,9 @@ codeowners:
 semaphore: 
   enable: true
   pipeline_type: cp-dockerfile
+  docker_repos: ['confluentinc/cp-kafka-mqtt',]              
+  maven_phase: 'package'                              
+  maven_skip_deploy: true                   
+  os_types: ['ubi8']                                    
+  build_arm: true
+  nano_version: true
