--- a/service.yml
+++ b/service.yml
@@ -7,3 +7,12 @@ codeowners:
 semaphore: 
   enable: true
   pipeline_type: cp-dockerfile
+  docker_repos: ['unsynced-confluentinc/cp-kafka-mqtt',]              
+  maven_phase: 'package'    
+  cve_scan : false                          
+  maven_skip_deploy: true                   
+  os_types: ['ubi8']                                    
+  build_arm: true
+  use_packages: true
+  cp_images: true
+  nano_version: true
