--- a/service.yml
+++ b/service.yml
@@ -14,6 +14,7 @@ semaphore:
   os_types: ['ubi8']                                    
   build_arm: true
   use_packages: true
+  sign_images: true
   cp_images: true
   nano_version: true
   tasks:
