--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <packaging>pom</packaging>
     <name>Kafka MQTT Docker Images</name>
     <description>Build files for Confluent's Kafka MQTT Docker images</description>
-    <version>7.4.6</version>
+    <version>7.4.6-57</version>
 
     <modules>
         <module>kafka-mqtt</module>
@@ -38,6 +38,6 @@
 
     <properties>
         <component.name>kafka-mqtt</component.name>
-        <io.confluent.kafka-mqtt-images.version>7.4.6</io.confluent.kafka-mqtt-images.version>
+        <io.confluent.kafka-mqtt-images.version>7.4.6-57</io.confluent.kafka-mqtt-images.version>
     </properties>
 </project>
