--- a/kafka-mqtt/pom.xml
+++ b/kafka-mqtt/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>io.confluent.kafka-mqtt-images</groupId>
         <artifactId>kafka-mqtt-images-parent</artifactId>
-        <version>7.2.12</version>
+        <version>7.2.12-18</version>
     </parent>
 
     <groupId>io.confluent.kafka-mqtt-images</groupId>
