--- a/service.yml
+++ b/service.yml
@@ -12,7 +12,9 @@ code_artifact:
 semaphore: 
   enable: true
   pipeline_type: cp-dockerfile
-  docker_repos: ['confluentinc/cp-kafka-mqtt',]              
+  docker_repos: ['confluentinc/cp-kafka-mqtt',]
+  community_docker_repos: []
+  community_maven_modules: []            
   maven_phase: 'package'    
   cve_scan : false                          
   maven_skip_deploy: true                   
@@ -49,6 +51,13 @@ semaphore:
         - name: CONFLUENT_DEB_VERSION
           required: true
           default_value: '1'
+        - name: SKIP_COMMUNITY
+          required: false
+          default_value: 'False'
+          description: 'Skip building community docker images'
+          options:
+            - 'True'
+            - 'False'
     - name: cp-dockerfile-promote
       branch: master
       pipeline_file: .semaphore/cp_dockerfile_promote.yml
@@ -71,5 +80,12 @@ semaphore:
           options:
             - 'deb'
             - 'ubi'
+        - name: SKIP_COMMUNITY
+          required: false
+          default_value: 'False'
+          description: 'Skip publishing community docker images'
+          options:
+            - 'True'
+            - 'False'
 sonarqube:
   enable: true
